# RaylibRPG

./: .gitignore  .gitkeep  CMakeLists.txt  README.md  build-raylib.sh
assets/Tiny Swords (Update 010)/Factions/Undeads/Troops/Pawn/Blue/: Pawn_Blue_Temp.aseprite
assets/Tiny Swords (Update 010)/Factions/Undeads/Troops/Warrior/Blue/: Warrior_Blue_Temp.aseprite
assets/Tiny Swords (Update 010)/Terrain/Ground/: a.out  tilemaptest.c
src/: main.c
src/core/: asset_manager.c  asset_manager.h  buildings.c  buildings.h  custom_cursor.c  custom_cursor.h  map.c  map.h  npc.c  npc.h  raylib_wrapper.h  resources.c  resources.h  tile_placement_data.c  tile_placement_data.h  tilemap.c  tilemap.h
src/scenes/: debug_scene.c  debug_scene.h  main_menu_scene.c  main_menu_scene.h  scene_manager.c  scene_manager.h  test_map_scene.c  test_map_scene.h  tile_placement_scene.c  tile_placement_scene.h
src/utils/: raylib_utils.c  raylib_utils.h
